--- a/Assignment1/Pages/Index.razor
+++ b/Assignment1/Pages/Index.razor
@@ -1,5 +1,10 @@
 @page "/"
 <h1>Welcome to DNP1 Assignment</h1>
 <AuthorizeView>
-<ViewAdults/>
+    <ul class="form-group">
+        <h3>Future updates</h3>
+        <li>Edit adult</li>
+        <li>Remove adult for "admin"</li>
+        <li>Implement family</li>
+    </ul>
 </AuthorizeView>
