--- a/Assignment1/Pages/PieChart.razor
+++ b/Assignment1/Pages/PieChart.razor
@@ -14,7 +14,6 @@
 @code {
     private PieConfig pieConfig;
     private List<Adult> Adults = new List<Adult>();
-    private int young = 0;
     private int semiMedium = 0;
     private int medium = 0;
     private int semiOld = 0;
@@ -42,11 +41,8 @@
         foreach (var adults in FileContext.Adults)
         {
             Adults.Add(adults);
-            if (adults.Age <= 18)
-            {
-                young++;
-            }
-            else if (adults.Age > 18 && adults.Age < 27)
+           
+             if (adults.Age > 18 && adults.Age < 27)
             {
                 semiMedium++;
             }
@@ -64,11 +60,11 @@
             }
         }
 
-        foreach (var age in new[] {"Younger than 18 ", "Between 18-27 ", "Between 27-35 ", "Between 35-50 ", "50+ "})
+        foreach (var age in new[] { "Between 18-27 ", "Between 27-35 ", "Between 35-50 ", "50+ "})
         {
             pieConfig.Data.Labels.Add(age);
         }
-        var dataset = new PieDataset<int>(new[] {young, semiMedium, medium, semiOld, old})
+        var dataset = new PieDataset<int>(new[] { semiMedium, medium, semiOld, old})
         {
             BackgroundColor = new[]
             {
@@ -76,7 +72,7 @@
                 ColorUtil.ColorHexString(0, 255, 0),
                 ColorUtil.ColorHexString(0, 0, 255),
                 ColorUtil.ColorHexString(100, 150, 8),
-                ColorUtil.ColorHexString(73, 50, 28)
+               
             }
         };
         pieConfig.Data.Datasets.Add(dataset);
