--- a/Assignment1/Shared/NavMenu.razor
+++ b/Assignment1/Shared/NavMenu.razor
@@ -9,20 +9,25 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <AuthorizeView>
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> View Adults
-            </NavLink>
-            
 
-            <NavLink class="nav-link" href="AddAdult">
-                <span class="oi oi-list" aria-hidden="true"></span> AddAdult
-            </NavLink>
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+
+                <NavLink class="nav-link" href="ViewAdults" >
+                    <span class="oi oi-list" aria-hidden="true"></span> View Adults
+                </NavLink>
+                
+                <NavLink class="nav-link" href="AddAdult">
+                    <span class="oi oi-plus" aria-hidden="true"></span> AddAdult
+                </NavLink>
+                
             </AuthorizeView>
-                    <AuthorizeView Policy="Admin">
-                        <NavLink class="nav-link" href="PieChart">
-                           <span class="iconify" data-icon="oi:pie-chart" aria-hidden="true "></span>Pie Chart
-                        </NavLink>
-                        
+            <AuthorizeView Policy="Admin">
+                <NavLink class="nav-link" href="PieChart">
+                    <span class="iconify" data-icon="oi:pie-chart" aria-hidden="true "></span>Pie Chart
+                </NavLink>
+
             </AuthorizeView>
 
         </li>
