--- a/Assignment1/Pages/Login.razor
+++ b/Assignment1/Pages/Login.razor
@@ -42,13 +42,14 @@
         errorMessage = "";
         try
         {
-            ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
+           await ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
             NavigationManager.NavigateTo("ViewAdults");
             username = "";
             password = "";
         }
         catch (Exception e)
         {
+            Console.WriteLine("Login Problem");
             errorMessage = e.Message;
         }
     }
