--- a/Assignment1/Pages/Login.razor
+++ b/Assignment1/Pages/Login.razor
@@ -49,8 +49,7 @@
         }
         catch (Exception e)
         {
-            Console.WriteLine("Login Problem");
-            errorMessage = e.Message;
+            errorMessage = e.Message.Contains('U') ? "UserName not found" : "Incorrect Password";
         }
     }
 
