--- a/Assignment1/Pages/PieChart.razor
+++ b/Assignment1/Pages/PieChart.razor
@@ -1,7 +1,8 @@
 ﻿@page "/PieChart"
-@inject FileContext FileContext
+@inject IAdult IAdult;
 @using ChartJs.Blazor.PieChart
 @using Models
+@using Assignment1.Data
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize(Policy = "Admin")];
 
@@ -13,36 +14,39 @@
 
 @code {
     private PieConfig pieConfig;
-    private List<Adult> Adults = new List<Adult>();
+    private List<Adult> Adults;
     private int semiMedium = 0;
     private int medium = 0;
     private int semiOld = 0;
     private int old = 0;
+    private IList<Adult> temp = new List<Adult>();
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        ConfigurePieChart();
+        Adults = new List<Adult>();
+        await ConfigurePieChart();
     }
 
-    private void ConfigurePieChart()
+    private async Task ConfigurePieChart()
     {
-        pieConfig = new PieConfig();
-
-        pieConfig.Options = new PieOptions()
+        pieConfig = new PieConfig
         {
-            Responsive = true,
-            Title = new OptionsTitle
+            Options = new PieOptions()
             {
-                Display = true,
-                Text = "Pie Chart"
+                Responsive = true,
+                Title = new OptionsTitle
+                {
+                    Display = true,
+                    Text = "Pie Chart"
+                }
             }
         };
-
-        foreach (var adults in FileContext.Adults)
+        temp = await IAdult.GetAdultAsync();
+        foreach (var adults in  temp)
         {
-            Adults.Add(adults);
-           
-             if (adults.Age > 18 && adults.Age < 27)
+           Adults.Add(adults);
+
+            if (adults.Age > 18 && adults.Age < 27)
             {
                 semiMedium++;
             }
@@ -60,11 +64,12 @@
             }
         }
 
-        foreach (var age in new[] { "Between 18-27 ", "Between 27-35 ", "Between 35-50 ", "50+ "})
+
+        foreach (var age in new[] {"Between 18-27 ", "Between 27-35 ", "Between 35-50 ", "50+ "})
         {
             pieConfig.Data.Labels.Add(age);
         }
-        var dataset = new PieDataset<int>(new[] { semiMedium, medium, semiOld, old})
+        var dataset = new PieDataset<int>(new[] {semiMedium, medium, semiOld, old})
         {
             BackgroundColor = new[]
             {
@@ -72,10 +77,9 @@
                 ColorUtil.ColorHexString(0, 255, 0),
                 ColorUtil.ColorHexString(0, 0, 255),
                 ColorUtil.ColorHexString(100, 150, 8),
-               
             }
         };
-        pieConfig.Data.Datasets.Add(dataset);
+         pieConfig.Data.Datasets.Add(dataset);
     }
 
 }
